# SmartTutor

./: .gitignore  README.md  api.py  api_test.py  arxiv_ids.txt  blog_data.xml  main.py  pyproject.toml  requirements.txt  web_ui.html
clustering/: tsne_transformed.tsv
data/: arxiv_metas.xml  lists.txt  papers.csv
data/manually_categorized/: audio.csv  bayesian.csv  cv_generative.csv  cv_pattern.csv  dl_general.csv  dl_misc.csv  dl_nlp.csv  dl_opt.csv  dl_rl.csv  dl_rnn.csv  learning_theory.csv  ml_classic.csv  ml_general.csv  ml_representation.csv  ml_sampling.csv  ml_tuning.csv  papers.csv  signal.csv  vision.csv
embedding/: env.py  hf_local.py  rag.py  utils.py  vector_db.py
notebooks/: books_clustering.ipynb  compare.ipynb  latent.ipynb  lda.ipynb  mindmap.md  nmf.ipynb  rag.ipynb
scrape/: __init__.py  arxiv_meta_loader.py  arxiv_scraper.py  downloader.py  link_scraper.py  load_papers.py  meta_scrape_loader.py  readme_scraper.py  utils.py
