[project]
name = "smarttutor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "arxiv>=2.1.3",
    "jupyter>=1.1.1",
    "langchain-community>=0.3.19",
    "langchain-huggingface>=0.1.2",
    "pandas>=2.2.3",
    "pymupdf>=1.25.4",
    "requests>=2.32.3",
    "tkinterdnd2>=0.4.3",
]
