[project]
name = "smarttutor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "arxiv>=2.1.3",
    "jupyter>=1.1.1",
    "langchain-community>=0.3.19",
    "langchain-huggingface>=0.1.2",
    "matplotlib>=3.10.1",
    "matplotlib-inline>=0.1.7",
    "opentsne>=1.0.2",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "psycopg>=3.2.6",
    "pymupdf>=1.25.4",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "selenium>=4.29.0",
    "tabulate>=0.9.0",
    "tkinterdnd2>=0.4.3",
    "tqdm>=4.67.1",
    "webdriver-manager>=4.0.2",
]
